Updating filterz so it works with inline images and the code is a little neater

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                         <h2 class="heading--large">Introduction</h2>
                         <p>A brand book and front-end style guide for Leadin.</p>
                         <p><a href="files/leadin_brand_book_official.pdf">Download Leadin Brand Book (PDF, 1.8MB)</a></p>
+                        <h3>Contents</h3>
+                        <ul>
+                          <li>Coming soon</li>
+                        </ul>
                     </div>
                     <!-- End of column -->
                 </div>
@@ -323,7 +327,7 @@
                     <div class="column third">
                         <div class="example example--no-border">
                           <div class="filter">
-                              <div class="filter__layer filter__layer--windmill"></div>
+                              <img class="filter__image" src="/img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
                           </div>
                             <p class="example__caption">Preferred style: clean, levels/curves adjusted.</p>
                         </div>
@@ -332,9 +336,8 @@
                     <!-- End of column -->
                     <div class="column third">
                         <div class="example example--no-border">
-                          <div class="filter">
-                              <div class="filter__layer filter__layer--windmill"></div>
-                              <div class="filter__layer filter__layer--multiply background--yellow"></div>
+                          <div class="filter background--yellow">
+                              <img class="filter__image--multiply" src="/img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
                           </div>
                             <p class="example__caption">Alternative style A: with multiply color layer.</p>
                         </div><!-- End of layerz -->
@@ -343,11 +346,10 @@
                     <!-- End of column -->
                     <div class="column third">
                         <div class="example example--no-border">
-                          <div class="filter">
-                              <div class="filter__layer filter__layer--grayscale filter__layer--windmill"></div>
-                              <div class="filter__layer filter__layer--multiply background--yellow"></div>
+                          <div class="filter background--yellow">
+                              <img class="filter__image--multiply filter__image--desaturate" src="/img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
                           </div>
-                            <p class="example__caption">Alternative style B: with grayscale layer &amp; multiply color layer.</p>
+                            <p class="example__caption">Alternative style B: with desaturate layer &amp; multiply color layer.</p>
                         </div>
                         <!-- End of example -->
                     </div>
