Fixing image path

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <div class="column third">
                         <div class="example example--no-border">
                           <div class="filter">
-                              <img class="filter__image" src="/img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
+                              <img class="filter__image" src="img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
                           </div>
                             <p class="example__caption">Preferred style: clean, levels/curves adjusted.</p>
                         </div>
@@ -337,7 +337,7 @@
                     <div class="column third">
                         <div class="example example--no-border">
                           <div class="filter background--yellow">
-                              <img class="filter__image--multiply" src="/img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
+                              <img class="filter__image--multiply" src="img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
                           </div>
                             <p class="example__caption">Alternative style A: with multiply color layer.</p>
                         </div><!-- End of layerz -->
@@ -347,7 +347,7 @@
                     <div class="column third">
                         <div class="example example--no-border">
                           <div class="filter background--yellow">
-                              <img class="filter__image--multiply filter__image--desaturate" src="/img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
+                              <img class="filter__image--multiply filter__image--desaturate" src="img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
                           </div>
                             <p class="example__caption">Alternative style B: with desaturate layer &amp; multiply color layer.</p>
                         </div>
