--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
 <body>
 
     <header role="banner">
-        <div class="container header background--white">
+        <div class="container header container--border">
             <div class="row clearfix">
-                <div class="column">
+                <div class="column half">
                   <img class="logo" src="img/site-logo-orange.png" alt="">
                   <p class="visuallyhidden">Leadin</p>
+                </div>
+                <div class="column half text--align-right">
+                  <a href="https://twitter.com/LeadinOy"><i class="icon icon__twitter-dark-grey">
+                    <span class="visuallyhidden">Twitter</span>
+                  </i>
+                  </a>
                 </div>
                 <!-- End of column -->
             </div>
@@ -32,7 +38,7 @@
 
     <main class="content" role="main">
         <section>
-            <div class="container text--align-center background--light-grey">
+              <div class="container text--align-center container--border">
                 <div class="row clearfix">
                     <div class="column">
                         <h1 class="heading--xlarge">Leadin Brand Book</h1>
@@ -56,28 +62,28 @@
                 <!-- End of row -->
                 <div class="row clearfix">
                     <div class="column quarter">
-                        <div class="example">
+                        <div class="example example--no-border">
                             <img src="img/logo-white-on-orange.png" alt="White text on orange background logo">
                         </div>
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
                     <div class="column quarter">
-                        <div class="example">
+                        <div class="example example--no-border">
                             <img src="img/logo-white-on-dark-grey.png" alt="White text on dark grey background logo">
                         </div>
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
                     <div class="column quarter">
-                        <div class="example">
+                        <div class="example example--no-border">
                             <img src="img/logo-orange-on-white.png" alt="Orange text on white background logo">
                         </div>
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
                     <div class="column quarter">
-                        <div class="example">
+                        <div class="example example--no-border">
                             <img src="img/logo-dark-grey-on-white.png" alt="Dark grey text on white background logo">
                         </div>
                         <!-- End of example -->
