Increasing padding on container sizes and removing max-width on larger breaks

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="container text--align-center container--border">
                 <div class="row clearfix">
                     <div class="column">
-                        <h1 class="heading--xlarge">Leadin Brand Book</h1>
+                        <h1 class="heading--xlarge margin-bottom--none">Leadin Brand Book</h1>
                         <p>A brand book and front-end style guide for Leadin.</p>
                         <p><a href="files/leadin_brand_book_official.pdf">Download Leadin Brand Book (PDF, 1.8MB)</a></p>
                     </div>
