Adding more icons

--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
     <header role="banner">
         <div class="container header container--border">
             <div class="row clearfix">
-                <div class="column half">
-                  <img class="logo" src="img/site-logo-orange.png" alt="">
-                  <p class="visuallyhidden">Leadin</p>
+                <div class="column--small column__half--small">
+                    <img class="logo" src="img/site-logo-orange.png" alt="">
+                    <p class="visuallyhidden">Leadin</p>
                 </div>
-                <div class="column half text--align-right">
-                  <a href="https://twitter.com/LeadinOy"><i class="icon icon__twitter-dark-grey">
-                    <span class="visuallyhidden">Twitter</span>
+                <div class="column--small column__half--small text--align-right">
+                      <i class="icon icon__twitter-dark-grey">
+                        <span class="visuallyhidden">Twitter</span>
+                      </i>
+                    <i class="icon icon__linkedin-dark-grey">
+                      <span class="visuallyhidden">Linkedin</span>
+                    </i>
+                  <i class="icon icon__facebook-dark-grey">
+                    <span class="visuallyhidden">Facebook</span>
                   </i>
-                  </a>
                 </div>
                 <!-- End of column -->
             </div>
@@ -38,10 +43,10 @@
 
     <main class="content" role="main">
         <section>
-              <div class="container text--align-center container--border">
+            <div class="container text--align-center container--border">
                 <div class="row clearfix">
                     <div class="column">
-                        <h1 class="heading--xlarge margin-bottom--none">Leadin Brand Book</h1>
+                        <h1 class="heading--xxlarge margin-bottom--none">Leadin Brand Book</h1>
                         <p>A brand book and front-end style guide for Leadin.</p>
                         <p><a href="files/leadin_brand_book_official.pdf">Download Leadin Brand Book (PDF, 1.8MB)</a></p>
                     </div>
@@ -100,7 +105,7 @@
                     <div class="column">
                         <h2 id="typography" class="heading--large">Typography</h2>
                         <p>The Leadin font is Source Sans Pro.</p>
-                        <p><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Get Source Sans Pro from Google Fonts</a>.</p>
+                        <p class="padding-bottom--medium"><a href="https://www.google.com/fonts/specimen/Source+Sans+Pro">Get Source Sans Pro from Google Fonts</a>.</p>
                         <div class="example">
                             <p class="heading--xxlarge"><span class="font-weight--light">01</span> <span class="font-weight--regular">02</span> <span class="font-weight--semi-bold">03</span> <span class="font-weight--bold">04</span></p>
                         </div>
