Hiding header icons for now

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p class="visuallyhidden">Leadin</p>
                 </div>
                 <div class="column--small column__half--small text--align-right">
-                      <i class="icon icon__twitter-dark-grey">
+                      <!-- <i class="icon icon__twitter-dark-grey">
                         <span class="visuallyhidden">Twitter</span>
                       </i>
                     <i class="icon icon__linkedin-dark-grey">
@@ -32,7 +32,7 @@
                     </i>
                   <i class="icon icon__facebook-dark-grey">
                     <span class="visuallyhidden">Facebook</span>
-                  </i>
+                  </i> -->
                 </div>
                 <!-- End of column -->
             </div>
