--- a/productising.html
+++ b/productising.html
@@ -1,7 +1,18 @@
 <!doctype html>
 <html lang="en">
 
-{% include head.html %}
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Leadin Brand Book</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+
+    <!-- Get font from Google Fonts. You probably won’t need all these weights for production. -->
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,700,600italic,600,400italic,300italic,300,200italic,200' rel='stylesheet' type='text/css'>
+</head>
 
 <body>
 
