Fixing layout on older pages now that the classes have changed

--- a/index.html
+++ b/index.html
@@ -66,28 +66,28 @@
                 </div>
                 <!-- End of row -->
                 <div class="row clearfix">
-                    <div class="column quarter">
+                    <div class="column column--quarter">
                         <div class="example example--no-border">
                             <img src="img/logo-white-on-orange.png" alt="White text on orange background logo">
                         </div>
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column quarter">
+                    <div class="column column--quarter">
                         <div class="example example--no-border">
                             <img src="img/logo-white-on-dark-grey.png" alt="White text on dark grey background logo">
                         </div>
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column quarter">
+                    <div class="column column--quarter">
                         <div class="example example--no-border">
                             <img src="img/logo-orange-on-white.png" alt="Orange text on white background logo">
                         </div>
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column quarter">
+                    <div class="column column--quarter">
                         <div class="example example--no-border">
                             <img src="img/logo-dark-grey-on-white.png" alt="Dark grey text on white background logo">
                         </div>
@@ -147,7 +147,7 @@
                 </div>
                 <!-- End of row -->
                 <div class="row clearfix">
-                    <div class="column half">
+                    <div class="column column--half">
                         <div class="example font-weight--light">
                             <p>Light 300</p>
                             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
@@ -157,7 +157,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column half">
+                    <div class="column column--half">
                         <div class="example font-weight--regular">
                             <p>Regular 400</p>
                             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
@@ -170,7 +170,7 @@
                 </div>
                 <!-- End of row -->
                 <div class="row clearfix">
-                    <div class="column half">
+                    <div class="column column--half">
                         <div class="example font-weight--semi-bold">
                             <p>Semi-bold 600</p>
                             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
@@ -180,7 +180,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column half">
+                    <div class="column column--half">
                         <div class="example font-weight--bold">
                             <p>Bold 700</p>
                             <p>ABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖÂÀÁ
@@ -205,7 +205,7 @@
                 </div>
                 <!-- End of row -->
                 <div class="row clearfix">
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Orange</p>
                             <div class="swatch__circle background--orange"></div>
@@ -214,7 +214,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Light Grey</p>
                             <div class="swatch__circle background--light-grey"></div>
@@ -223,7 +223,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Medium Grey</p>
                             <div class="swatch__circle background--medium-grey"></div>
@@ -232,7 +232,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Dark Grey</p>
                             <div class="swatch__circle background--dark-grey"></div>
@@ -241,7 +241,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Pink</p>
                             <div class="swatch__circle background--pink"></div>
@@ -250,7 +250,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Peach</p>
                             <div class="swatch__circle background--peach"></div>
@@ -262,7 +262,7 @@
                 </div>
                 <!-- End of row -->
                 <div class="row clearfix">
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Yellow</p>
                             <div class="swatch__circle background--yellow"></div>
@@ -271,7 +271,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Green</p>
                             <div class="swatch__circle background--green"></div>
@@ -280,7 +280,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Turquoise</p>
                             <div class="swatch__circle background--turquoise"></div>
@@ -289,7 +289,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Blue</p>
                             <div class="swatch__circle background--blue"></div>
@@ -298,7 +298,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Purple</p>
                             <div class="swatch__circle background--purple"></div>
@@ -307,7 +307,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column sixth">
+                    <div class="column column--sixth">
                         <div class="example swatch">
                             <p>Warm Grey</p>
                             <div class="swatch__circle background--warm-grey"></div>
@@ -332,7 +332,7 @@
                 </div>
                 <!-- End of row -->
                 <div class="row clearfix">
-                    <div class="column third">
+                    <div class="column column--third">
                         <div class="example example--no-border">
                             <div class="filter">
                                 <img class="filter__image" src="img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
@@ -343,7 +343,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column third">
+                    <div class="column column--third">
                         <div class="example example--no-border">
                             <div class="filter background--yellow">
                                 <img class="filter__image--multiply" src="img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
@@ -354,7 +354,7 @@
                         <!-- End of example -->
                     </div>
                     <!-- End of column -->
-                    <div class="column third">
+                    <div class="column column--third">
                         <div class="example example--no-border">
                             <div class="filter background--yellow">
                                 <img class="filter__image--multiply filter__image--desaturate" src="img/windmills.png" alt="A modern windmill in a field, against a large blue sky">
@@ -372,10 +372,10 @@
         </section>
     </main>
     <footer role="contentinfo">
-        <div class="container background--dark-grey text--align-center">
+        <div class="container footer text--align-center">
             <div class="row clearfix">
                 <div class="column">
-                    <p class="font-color--white margin-bottom--none">©2016</p>
+                    <p>©2016</p>
                 </div>
                 <!-- End of column -->
             </div>
