--- a/productising.html
+++ b/productising.html
@@ -48,9 +48,16 @@
         <section>
             <div class="container text--align-center container--border">
                 <div class="row clearfix">
-                    <div class="column background--dark-grey">
-                        <h1 class="heading--large margin-bottom--none">Productising a… <br />‘Service Design Consultancy’</h1>
-                        <p class="font-size--small">We look at the big picture – to help companies across all industries deliver better products, systems and services through user-centric research, testing and digital solutions.</p>
+                    <div class="column column--third background--dark-grey">
+                        <p class="font-color--white">Research</p>
+                    </div>
+                    <!-- End of column -->
+                    <div class="column column--third background--blue">
+                        <p class="font-color--white">Testing</p>
+                    </div>
+                    <!-- End of column -->
+                    <div class="column column--third background--orange">
+                        <p class="font-color--white">Training</p>
                     </div>
                     <!-- End of column -->
                 </div>
