Productising page ready for review

--- a/productising.html
+++ b/productising.html
@@ -32,11 +32,11 @@
 
     <main class="content" role="main">
         <section>
-            <div class="container text--align-center container--border">
+            <div class="container text--align-center container--border background--light-grey">
                 <div class="row clearfix">
-                    <div class="column">
-                        <h1 class="heading--large margin-bottom--none">Productising a… <br />‘Service Design Consultancy’</h1>
-                        <p class="font-size--small">We look at the big picture – to help companies across all industries deliver better products, systems and services through user-centric research, testing and digital solutions.</p>
+                    <div class="column column--large-padding">
+                        <h1 class="heading--xlarge margin-bottom--none">Productising a… <br />‘Service Design Consultancy’</h1>
+                        <p>We look at the big picture – to help companies across all industries deliver better products, systems and services through user-centric research, testing and digital solutions.</p>
                     </div>
                     <!-- End of column -->
                 </div>
@@ -46,18 +46,74 @@
         </section>
 
         <section>
-            <div class="container text--align-center container--border">
+            <div class="container container--border">
+              <div class="row clearfix">
+                  <div class="column column--no-padding column--half">
+                      <img src="img/post-its.jpg" alt="">
+                  </div>
+                  <!-- End of column -->
+                  <div class="column square column--half background--dark-grey">
+                    <div class="square__content">
+                      <h2 class="font-color--white">Digital Solutions</h2>
+                      <ul class="font-color--white">
+                        <li>User Interface Design &amp; Interactive Media</li>
+                        <li>Inteligent Systems &amp; Software Development</li>
+                        <li>Data Management Dashboards &amp; Monitoring Systems</li>
+                        <li>Digital Workflow Management Systems</li>
+                        <li>Mobile/Device Applications &amp; Web Development</li>
+                        <li>Intrumentation &amp; Digital Tool Creation</li>
+                        <li>Intrumentation Systems &amp; Heads-Up Displays</li>
+                        <li>Automation &amp; Control Systems</li>
+                        <li>Concept Design, Pilots &amp; Digital Prototyping</li>
+                        <li>3D Similation Modelling</li>
+                      </ul>
+                    </div>
+                    <!-- End of column square content -->
+                  </div>
+                  <!-- End of column -->
+              </div>
+              <!-- End of row -->
                 <div class="row clearfix">
-                    <div class="column column--third background--dark-grey">
-                        <p class="font-color--white">Research</p>
+                    <div class="column square column--quarter background--turquoise">
+                      <div class="square__content">
+                        <h2 class="heading--medium font-color--white">Research, Testing &amp; Validation</h2>
+                        <ul class="font-color--white">
+                          <li>User Experience Research</li>
+                          <li>Usability Research &amp; Testing</li>
+                          <li>Focus Group Studies</li>
+                          <li>Idea Generation &amp; Validation</li>
+                        </ul>
+                      </div>
+                      <!-- End of column square content -->
                     </div>
                     <!-- End of column -->
-                    <div class="column column--third background--blue">
-                        <p class="font-color--white">Testing</p>
+                    <div class="column square column--quarter background--warm-grey">
+                      <div class="square__content">
+                        <h2 class="heading--medium font-color--white">Growth Support</h2>
+                        <ul class="font-color--white">
+                          <li>Business Change Plans</li>
+                          <li>Business/Workflow Design</li>
+                          <li>Innovation Planning</li>
+                        </ul>
+                      </div>
+                      <!-- End of column square content -->
                     </div>
                     <!-- End of column -->
-                    <div class="column column--third background--orange">
-                        <p class="font-color--white">Training</p>
+                    <div class="column square column--quarter background--blue">
+                      <div class="square__content">
+                        <h2 class="heading--medium font-color--white">Training Workshops</h2>
+                        <ul class="font-color--white">
+                          <li>Research Methodologies</li>
+                          <li>Client Insight Analysis</li>
+                          <li>Conducting Focus Groups</li>
+                          <li>Pilot Study Planning</li>
+                        </ul>
+                      </div>
+                      <!-- End of column square content -->
+                    </div>
+                    <!-- End of column -->
+                    <div class="column column--no-padding column--quarter">
+                        <img src="img/smiling.jpg" alt="">
                     </div>
                     <!-- End of column -->
                 </div>
@@ -71,7 +127,7 @@
         <div class="container footer text--align-center">
             <div class="row clearfix">
                 <div class="column">
-                    <p>©2016</p>
+                    <p>© 2016</p>
                 </div>
                 <!-- End of column -->
             </div>
